--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,5 +45,6 @@ target_include_directories(lt_library
 )
 add_executable(test "test/main.cpp")
 target_sources(test PRIVATE "src/lt/defs/stb_sprintf.cpp")
+target_sources(test PRIVATE "src/lt/defs/log.cpp")
 
 target_link_libraries(test PUBLIC lt_library)
